# graph

./: README.md  package-lock.json  package.json
app/: README.md  app.py  layout.tsx  page.tsx  pyproject.toml
app/features/: page.tsx
app/plot/bar-plot/: page.tsx
app/plot/box-plot/: page.tsx
app/plot/heatmap/: page.tsx
app/plot/line-plot/: page.tsx
app/plot/pie-plot/: page.tsx
app/plot/scatter-plot/: page.tsx
components/: BarChart.tsx  GraphIQCarouselDemo.tsx
components/ui/: apple-cards-carousel.tsx
lib/: chartUtils.ts  useOnWindowResize.ts
